Link up Eureka to Asgard, gated by Conjur

--- a/eureka/Dockerfile
+++ b/eureka/Dockerfile
@@ -2,8 +2,7 @@ FROM uggedal/alpine
 MAINTAINER Rafal Rzepecki <rafal@conjur.net>
 
 RUN apk update
-RUN apk add openjdk7-jre-base ruby nginx-lua ruby-json ruby-bigdecimal
-RUN gem install -N conjur-cli
+RUN apk add openjdk7-jre-base nginx-lua
 
 #ADD http://www.eu.apache.org/dist/tomcat/tomcat-8/v8.0.9/bin/apache-tomcat-8.0.9.tar.gz /tmp/
 COPY apache-tomcat-8.0.9.tar.gz /tmp/
@@ -16,4 +15,9 @@ RUN rm /tmp/apache-tomcat-*.tar.gz
 #ADD https://netflixoss.ci.cloudbees.com/job/eureka-master/109/artifact/eureka-server/build/libs/eureka-server-1.1.139-SNAPSHOT.war /opt/apache-tomcat/webapps/eureka.war
 COPY eureka-server-1.1.139-SNAPSHOT.war /opt/apache-tomcat/webapps/eureka.war
 
-CMD ["/opt/apache-tomcat/bin/catalina.sh", "run"]
+EXPOSE 80
+
+CMD ["/etc/scripts/launch"]
+
+COPY scripts /etc/scripts
+COPY etc-nginx /etc/nginx
