--- a/eureka/etc-nginx/nginx.conf.template
+++ b/eureka/etc-nginx/nginx.conf.template
@@ -10,14 +10,15 @@ http {
     server <conjur-host>:443;
   }
 
-  upstream eureka {
-    server eureka;
-  }
-
   server {
     listen 80;
     location / {
       access_by_lua '
+        -- allow calling self
+        if ngx.var.remote_addr == "127.0.0.1" then
+          return
+        end
+
         local res = ngx.location.capture("/conjur-authn")
 
         if res.status >= 400 then
@@ -39,27 +40,6 @@ http {
       proxy_pass_request_body off;
       proxy_set_header Content-Length "";
       proxy_set_header X-Original-URI $request_uri;
-    }
-  }
-
-  lua_shared_dict conjur 256k;
-  lua_package_path '/etc/nginx/?.lua;;';
-  init_by_lua '
-    require("conjur")
-    conjur.set_host_credentials("<conjur-login>", "<conjur-key>")
-  ';
-
-  server {
-    listen 127.0.0.2:80;
-    location / {
-      proxy_pass http://eureka;
-      rewrite_by_lua 'conjur.authenticate_host()';
-    }
-
-    location = /conjur/authn {
-      internal;
-      proxy_pass_request_headers off;
-      proxy_pass 'https://conjur/api/authn/users/<conjur-login-quoted>/authenticate';
     }
   }
 }
