--- a/asgard/Dockerfile
+++ b/asgard/Dockerfile
@@ -1,16 +1,13 @@
-FROM uggedal/alpine
+FROM conjurinc/webservice
 MAINTAINER Rafal Rzepecki <rafal@conjur.net>
 
 RUN apk update
-RUN apk add openjdk7-jre-base ruby nginx-lua ruby-json ruby-bigdecimal
-RUN gem install -N conjur-cli
+RUN apk add openjdk7-jre-base
 
 ADD https://netflixoss.ci.cloudbees.com/job/asgard-master/lastStableBuild/artifact/asgard-standalone.jar /opt/asgard/asgard-standalone.jar
 
 COPY etc-asgard /etc/asgard
-COPY scripts /etc/scripts
-COPY etc-nginx /etc/nginx
+COPY launch /etc/scripts/
+COPY conjur.container /etc/
 
 EXPOSE 80
-
-CMD ["/etc/scripts/launch"]
