--- a/asgard/etc-asgard/asgard.env.yaml
+++ b/asgard/etc-asgard/asgard.env.yaml
@@ -1,3 +1,3 @@
-account_id: !var <conjur-policy>/aws_account
-key_id: !var <conjur-policy>/aws_access_key_id
-secret_key: !var <conjur-policy>/aws_secret_access_key
+account_id: !var /aws_account
+key_id: !var /aws_access_key_id
+secret_key: !var /aws_secret_access_key
