switch to sdf-gen; wip

--- a/asgard/service/Dockerfile
+++ b/asgard/service/Dockerfile
@@ -1,5 +1,4 @@
-FROM conjurinc/webservice
-MAINTAINER Rafal Rzepecki <rafal@conjur.net>
+FROM uggedal/alpine
 
 RUN apk update
 RUN apk add openjdk7-jre-base
@@ -8,6 +7,5 @@ ADD https://netflixoss.ci.cloudbees.com/job/asgard-master/lastStableBuild/artifa
 
 COPY etc-asgard /etc/asgard
 COPY launch /etc/scripts/
-COPY conjur.container /etc/
 
 EXPOSE 80
