more WIP-y with docker-compose

--- a/asgard/eureka/forward.conf
+++ b/asgard/eureka/forward.conf
@@ -21,7 +21,7 @@ server {
         -- fetch token from the conjur authn service
         local response = ngx.location.capture('/conjur/authn', {
           method = ngx.HTTP_POST,
-          body   = 'the-api-key'
+          body   = '@api-key@'
         })
 
         if response.status >= 300 then
@@ -44,6 +44,6 @@ server {
     internal;
     proxy_pass_request_headers off;
     
-    proxy_pass 'https://conjur/api/authn/users/host%2Fasgard-01/authenticate';
+    proxy_pass 'https://conjur/api/authn/users/%40host_id%40/authenticate';
   }
 }
