--- a/asgard/service/Dockerfile
+++ b/asgard/service/Dockerfile
@@ -5,7 +5,9 @@ RUN apk add openjdk7-jre-base
 
 ADD https://netflixoss.ci.cloudbees.com/job/asgard-master/lastStableBuild/artifact/asgard-standalone.jar /opt/asgard/asgard-standalone.jar
 
-COPY etc-asgard /etc/asgard
-COPY launch /etc/scripts/
+COPY etc /etc/asgard
+COPY launch /opt/
 
 EXPOSE 80
+
+CMD ["/opt/launch"]
